engine/test_pgns/invalid/spawn_relative_to_self.pgn
[GameType "Base+MLP"]
[Date "2023.01.08"]
[Event ""]
[Site "boardspace.net"]
[Round ""]
[White "csigeee"]
[Black "Balu"]
[Result "1-0"]

1. wP wP/


